--- a/Updated_Reg_Portal/docker-compose.yml
+++ b/Updated_Reg_Portal/docker-compose.yml
@@ -1,1 +1,23 @@
-version: "3.8"
+version: "3.5"
+services:
+  postgress:
+    image: postgres
+    restart: always
+    ports:
+      - 5432:5432
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: admin123
+      POSTGRES_DB: registration
+  app.py:
+    image: reg_port
+    restart: always
+    ports:
+      - 23000:25000
+    depends_on:
+      - postgress
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: admin123
+      POSTGRES_DB: registration
+      host: postgress
